--- a/jabberwocky.css
+++ b/jabberwocky.css
@@ -1,1 +1,9 @@
 /* Styles for Jabberwocky.html */
+
+header, h1, h3, div, img, p {
+  border: 2px solid orange;
+  padding: 4px;
+  margin: 8px;
+}
+
+
