Add bottom and right offset.

--- a/jabberwocky.css
+++ b/jabberwocky.css
@@ -1,1 +1,13 @@
 /* Styles for Jabberwocky.html */
+
+header, h1, h3, div, img, p {
+  border: 2px solid orange;
+  padding: 5px;
+  margin: 10px;
+}
+
+img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
