--- a/jabberwocky.css
+++ b/jabberwocky.css
@@ -1,1 +1,20 @@
 /* Styles for Jabberwocky.html */
+
+header, h1, h3, div, img, p {
+  border: 2px solid orange;
+  padding: 5px;
+  margin: 10px;
+}
+
+p {
+  float: left;
+  width: 25%;
+}
+
+img {
+  display: block;
+}
+
+div {
+  overflow: auto;
+}
