--- a/jabberwocky.css
+++ b/jabberwocky.css
@@ -1,1 +1,16 @@
 /* Styles for Jabberwocky.html */
+
+header, h1, h3, div, img, p {
+  border: 2px solid orange;
+  padding: 5px;
+  margin: 10px;
+}
+
+header {
+  width: 250px;
+  float: left;
+}
+
+div {
+  margin-left: 300px;
+}
