--- a/jabberwocky.css
+++ b/jabberwocky.css
@@ -1,9 +1,17 @@
 /* Styles for Jabberwocky.html */
 
 header, h1, h3, div, img, p {
-  border: 2px solid orange;
+  border: 2px solid #274886;
   padding: 5px;
   margin: 10px;
+}
+
+header {
+  background-color: #d5f7ff;
+}
+
+div {
+  background-color: #fdf5d9;
 }
 
 p {
